--- a/boutique/medium/1/index.html
+++ b/boutique/medium/1/index.html
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb active"><a><i><font class="en">Digital</font><font class="fr">Numérique</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
@@ -55,11 +55,11 @@
     <article>
 
       <ul class="product polyptych">
-        <li class="product-thumbnail">
+        <li class="product-vignette">
 
           <a href="last-of-the-big-tuskers/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
             </div>
           </a>
