--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb active"><a><i>Giclée</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
@@ -53,11 +53,11 @@
     <article>
 
       <ul class="product polyptych">
-        <li class="post-1510 product-thumbnail">
+        <li class="post-1510 product-vignette">
 
           <a href="isilo/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
             </div>
           </a>
@@ -68,41 +68,41 @@
 
         </li>
 
-        <!-- <li class="post-1505 product-thumbnail">
+        <!-- <li class="post-1505 product-vignette">
           <a href="kamboyo/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Kamboyo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Kamboyo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
             </div></a>
           <a href="kamboyo/"><h5 class="product-title">Kamboyo</h5></a>
           <h5 class="product-description"><font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
-        <!-- <li class="post-1507 product-thumbnail">
+        <!-- <li class="post-1507 product-vignette">
           <a href="masthulele/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Masthulele [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Masthulele vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
             </div></a>
           <a href="masthulele/"><h5 class="product-title">Masthulele</h5></a>
           <h5 class="product-description"><font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font></h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
-        <!-- <li class="post-1508 product-thumbnail">
+        <!-- <li class="post-1508 product-vignette">
           <a href="one-ton/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; One Ton [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; One Ton vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
             </div></a>
           <a href="one-ton/"><h5 class="product-title">One Ton</h5></a>
           <h5 class="product-description"><font class="en">Chyulu Hills National Park</font><font class="fr">Parc national de Chyulu Hills</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
-        <li class="post-1506 product-thumbnail">
+        <li class="post-1506 product-vignette">
 
           <a href="satao/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Satao [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Satao vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
 
             </div>
           </a>
@@ -113,15 +113,15 @@
 
         </li>
 
-        <li class="post-1509 product-thumbnail">
+        <li class="post-1509 product-vignette">
 
           <a href="tim-and-craig/">
             <div class="clear">
               <div class="gutter-small">
-                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
+                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
               </div>
               <div class="gutter-small">
-                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" />
+                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" />
               </div>
 
             </div>
