--- a/boutique/medium/giclee/tim-and-craig/index.html
+++ b/boutique/medium/giclee/tim-and-craig/index.html
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb"><a href="../" title="Animat Habitat boutique. Giclée.">Giclée</a></li>
       <li class="crumb active"><a><i>Tim</i></a></li>
@@ -50,8 +50,8 @@
   <div class="clear preview" id="preview-tim">
     <a onclick="preview_tim();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.864.jpg" />
-        <p class="linebreak"><i>Tim</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.864.jpg" />
+        <p class="linebreak"><i>Tim</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -60,23 +60,23 @@
   <div class="clear preview" id="preview-craig">
     <a onclick="preview_craig();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.864.jpg" />
-        <p class="linebreak"><i>Craig</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.864.jpg" />
+        <p class="linebreak"><i>Craig</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
   </div>
 
-  <div class="clear-bottom preview-thumbnail" id="preview-thumbnail">
+  <div class="clear-bottom vignette" id="vignette">
     <section class="single">
       <div class="clear-bottom diptych ptych-fixed">
 
         <div class="clear">
-          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" /></a>
+          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" /></a>
         </div>
 
         <div class="clear">
-          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" /></a>
+          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" /></a>
         </div>
 
       </div>
@@ -235,7 +235,7 @@
   <footer class="single" id="footnotes">
     <div class="quote">
       <p class="small"><sup>1</sup> <font class="en">Fifty (50) per cent of the purchase price is redirected to wildlife conservation projects in elephant range States in Africa in association with scene one at Animat Habitat.</font><font class="fr">Cinquante pour cent du prix d'achat est affecté à des projets de conservation de la nature dans les États de l'aire de répartition des éléphants en Afrique en association avec la première scène chez Animat Habitat.</font></p>
-      <p class="small"><sup>2</sup> <font class="en">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">conditions d'achat</a> de la boutique.</font></p>
+      <p class="small"><sup>2</sup> <font class="en">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">conditions d'achat</a>.</font></p>
 
     </div>
   </footer>
