--- a/boutique/medium/oeuvre/index.html
+++ b/boutique/medium/oeuvre/index.html
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb active"><a><i><font class="en">Original</font><font class="fr">Originale</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
@@ -55,17 +55,17 @@
     <article>
 
       <ul class="product polyptych">
-        <li class="product-thumbnail">
+        <li class="product-vignette">
 
           <a href="winter-wind-2008/">
             <div class="clear">
-              <img alt="Winter Wind (graphic pencil, 2008) [thumbnail] &copy; Dane Aleksander" src="../../../inc/img/boutique/winter-wind/2008.winter-wind.300-136.jpg" />
+              <img alt="Winter Wind, vignette, 2008 &copy; Dane Aleksander" src="../../../inc/img/boutique/winter-wind/2008.winter-wind.300-136.jpg" />
 
             </div>
           </a>
 
           <a href="winter-wind-2008/"><h5 class="product-title">Winter Wind</h5></a>
-          <h5 class="product-description">Rocky Mountain National Park, America</h5>
+          <h5 class="product-description"> <font class="en">Rocky Mountain National Park, America</font><font class="fr">Parc national des Montagnes Rocheuses, Amérique</font></h5>
           <h5 class="product-tag"><font class="en">Graphic Pencil</font><font class="fr">Crayon graphique</font></h5>
 
         </li>
