--- a/canon/index.html
+++ b/canon/index.html
@@ -31,7 +31,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Canon</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
@@ -120,9 +120,9 @@
         <p><font class="en">This mark is a symbol for Animat Habitat scenes in wildlife art &ndash; digital art experiences and traditional art exhibitions &ndash; where people can make a meaningful connection with the natural world. Our corporate canon is presented here to welcome people like you behind the scenes of this not-for-profit art studio, so that when this mark appears in print, there is a reminder of a shared passion for the wild and for wildlife art.</font><font class="fr">Cette marque est un symbole pour les scènes d'art de la nature, où vous pouvez établir un lien significatif avec le monde naturel. Notre canon corporatif est présentée ici pour accueillir des personnes comme vous dans les coulisses de ce studio d'art à but non lucratif, afin que lorsque cette marque apparaît comme impression, vous vous souvenez d'une passion commune pour la nature et pour l'art de la nature.</font></p>
 
         <div class="triptych ptych-fixed">
-          <div class="logo ptych-left"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="auto" src="../inc/svg/animat.mark.1.1.1200.light.svg" /></div>
-          <div class="logo ptych-center"><img alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" class="auto color" src="../inc/svg/animat.mark.1.1.1200.dark.svg" /></div>
-          <div class="logo ptych-right"><img alt="Animat Mark (Dune) &copy; Animat Habitat, 2015" class="auto" src="../inc/svg/animat.mark.1.1.1200.one.svg" /></div>
+          <div class="logo ptych-left"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="auto" src="../inc/svg/animat.mark.1.1.1200.light.svg" /></div>
+          <div class="logo ptych-center"><img alt="Animat Mark &ndash; Dark &copy; Animat Habitat, 2015" class="auto color" src="../inc/svg/animat.mark.1.1.1200.dark.svg" /></div>
+          <div class="logo ptych-right"><img alt="Animat Mark &ndash; One &copy; Animat Habitat, 2015" class="auto" src="../inc/svg/animat.mark.1.1.1200.one.svg" /></div>
 
         </div>
         <p class="text-right gutter-side lineend">Animat Habitat <i>Mark</i> (<font class="fr">&nbsp;</font>Light, Dark, One<font class="fr">&nbsp;</font>)</p>
