--- a/conservation/africa/index.html
+++ b/conservation/africa/index.html
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../" title="Animat Habitat conservation.">Conservation</a></li>
       <li class="crumb active"><a><i>Africa</i></a></li>
       <li class="right thin"><a href="../afrique/" title="Animat Habitat conservation. Afrique">fr</a></li>
@@ -195,7 +195,7 @@
               <li>Liwonde National Park</li>
             </ul> -->
 
-            <p class="linebreak small">More habitats protected by <a href="../../url/-gov-mz/anac/" title="Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o, Mozambique" target="_blank">Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o</a>, Mozambique.</p>
+            <p class="linebreak small">More habitats protected by <a href="../../url/-gov-mz/anac/" title="Adminstração Nacional das Áreas de Conservação, Mozambique" target="_blank">Adminstração Nacional das Áreas de Conservação</a>, Mozambique.</p>
             <ul class="small">
               <li>Banhine National Park</li>
               <li>Bazaruto National Park</li>
