--- a/conservation/afrique/index.html
+++ b/conservation/afrique/index.html
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../" title="Animat Habitat conservation.">Conservation</a></li>
       <li class="crumb active"><a><i>Afrique</i></a></li>
       <li class="right thin"><a href="../africa/" title="Animat Habitat conservation. Africa">en</a></li>
@@ -65,7 +65,7 @@
               <li><a href="../../url/elephantsandbees-com/" title="Save the Elephants / The Elephants and Bees Project" target="_blank">The Elephants and Bees Project</a>, <i>Kenya</i></li>
               <li><a href="../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank">Elephant Voices</a>, <i>Kenya</i></li>
               <li><a href="../../url/-org/maraelephantproject/" title="Save the Elephants / The Mara Elephant Project" target="_blank">Mara Elephant Project</a>, <i>Kenya</i></li>
-              <li><a href="../../url/-org/wildnatureinstitute/" title="WNI" target="_blank">Wild Nature Institute</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/-org/wildnatureinstitute/" title="WNI" target="_blank">Wild Nature Institute</a>, <i>Tanzanie</i></li>
             </ul>
 
           </div> -->
@@ -199,7 +199,7 @@
               <li>Liwonde National Park</li>
             </ul> -->
 
-            <p class="linebreak small">Plus d'habitats protégées par <a href="../../url/-gov-mz/anac/" title="Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o, Mozambique" target="_blank">Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o</a> au Mozambique.</font></p>
+            <p class="linebreak small">Plus d'habitats protégées par <a href="../../url/-gov-mz/anac/" title="Adminstração Nacional das Áreas de Conservação, Mozambique" target="_blank">Adminstração Nacional das Áreas de Conservação</a> au Mozambique.</font></p>
             <ul class="small">
               <li>Banhine National Park</li>
               <li>Bazaruto National Park</li>
@@ -285,7 +285,7 @@
               <li>Nxai Pan National Park</li>
             </ul>
 
-            <p class="linebreak small">Plus d'habitats protégées par <a href="../../url/-gov-na/met/" title="Ministry of Environment and Tourism, Namibia" target="_blank">Ministry of Environment and Tourism</a> en Namibie.</font></p>
+            <p class="linebreak small">Plus d'habitats protégées par <a href="../../url/-gov-na/met/" title="Ministry of Environment and Tourism, Namibie" target="_blank">Ministry of Environment and Tourism</a> en Namibie.</font></p>
             <ul class="small">
               <li>Bwabwata National Park</li>
               <li>Dorob National Park</li>
@@ -313,7 +313,7 @@
 
             </ul>
 
-            <p class="linebreak small">Plus d'habitats protégées par <!--a href="../../url/-gov-zm/mota/" title="Ministry of Tourism and Arts, Zambia" target="_blank"-->Ministry of Tourism and Arts<!--/a--> au Zambie.</font></p>
+            <p class="linebreak small">Plus d'habitats protégées par <!--a href="../../url/-gov-zm/mota/" title="Ministry of Tourism and Arts, Zambie" target="_blank"-->Ministry of Tourism and Arts<!--/a--> au Zambie.</font></p>
             <ul class="small">
               <li>Blue Lagoon National Park</li>
               <li>Kafue  National Park</li>
