--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <nav>
     <ul class="home">
-      <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
+      <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark &ndash; Dark &copy; Animat Habitat, 2015" /></a></li>
       <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one, scène un.">I</a></li>
       <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two, scène deux.">II</a></li> -->
       <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three, scène trois.">III</a></li> -->
@@ -65,7 +65,7 @@
       <div class="clear diptych">
 
         <div>
-          <a class="project-thumbnail" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
+          <a class="project-vignette" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
             <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
             <div class="bg-one">
               <h3><font class="color-one">Last of the Big Tuskers (<font class="fr">&nbsp;</font>2018<font class="fr">&nbsp;</font>)</font></h3>
@@ -77,7 +77,7 @@
         </div>
 
         <div>
-          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one, scène un.">
+          <a class="project-vignette" href="scene/one/" title="Animat Habitat scene one, scène un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one: White Elephant cover art, 2024." />
             <div class="bg-one">
               <h3><font class="color-one">I&nbsp; White Elephant (&ndash;)</font></h3>
