--- a/patron/index.html
+++ b/patron/index.html
@@ -29,7 +29,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Patrons</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <!-- <li class="right thin"><a class="title" onclick="toggle_currency();">
@@ -55,17 +55,17 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button><font class="en">Donation</font><font class="fr">Don</font> <font class="small">CA$</font></button></a>
+          <a href="../donate/" title="PayPal / En / Animat Habitat" rel="noopener"><button><font class="en">Donation</font><font class="fr">Don</font> <font class="en small">CA$</font><font class="fr small">$&nbspCA</font></button></a>
           <p class="linebreak lineend"><font class="en">Support independent art at Animat Habitat with any amount you can, <i>with no strings attached</i>.</font><font class="fr">Soutenez l'art indépendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
 
           <pre class="thin"></pre>
 
-          <p class="linebreak small"><font class="en">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the secretariat at Animat Habitat</font><font class="fr">Votre don &ndash; incluant information de carte de débit ou de crédit &ndash; est accepté avec PayPal. Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement sécurisé &ndash; veuillez contacter le secrétariat chez Animat Habitat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org?subject=Instructions" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]<font class="fr">&nbsp;</font>.</p>
+          <p class="linebreak small"><font class="en">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the secretariat at Animat Habitat</font><font class="fr">Votre don &ndash; incluant information de carte de débit ou de crédit &ndash; est accepté avec PayPal. Pour un don de plus de 250&nbsp;$&nbsp;CA &ndash; et pour obtenir des instructions de virement sécurisé &ndash; veuillez contacter le secrétariat chez Animat Habitat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org?subject=Instructions" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]<font class="fr">&nbsp;</font>.</p>
 
         </div>
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal" target="_blank" rel="noopener"><button>Patron <font class="small">CA$25 <font class="en">per&nbsp;yr</font><font class="fr">par&nbsp;an</font></font></button></a>
+          <a href="25/" title="PayPal" target="_blank" rel="noopener"><button>Patron <font class="small"><font class="en">CA$</font>25<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a>
           <p class="linebreak"><font class="en">Support independent art at Animat Habitat as a Patron Member, and you will receive:</font><font class="fr">Soutenez l'art indépendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
           <ul class="square">
@@ -88,7 +88,7 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" target="_blank" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 <font class="en">per&nbsp;yr</font><font class="fr">par&nbsp;an</font></font></button></a>
+          <a href="250/" target="_blank" title="PayPal / Periwinkle Council at Animat Habitat" rel="noopener"><button>Periwinkle <font class="small"><font class="en">CA$</font>250<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a>
           <p class="linebreak"><font class="en">Support research and development at Animat Habitat as a Periwinkle Council member, and you will receive:</font><font class="fr">Soutenez la recherche et le développement chez Animat Habitat en tant que membre du Conseil Pervenche, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i><font class="en">All patron benefits plus&hellip;</font><font class="fr">Tous les avantages des patrons plus&hellip;</font></i></p>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="clear-top">
-          <a onclick="silver_council();" title="Silver Council"><button>Silver <font class="small">CA$2,500 <font class="en">per&nbsp;yr</font><font class="fr">par&nbsp;an</font></font></button></a>
+          <a onclick="silver_council();" title="Silver Council"><button>Silver <font class="small"><font class="en">CA$</font>2<font class="en">,</font><font class="fr">&nbsp;</font>500<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a>
 
           <div class="color" id="silver-council">
 
@@ -143,7 +143,7 @@
 
         <div>
           <h5><font class="color-one"><font class="en">Scene One Selections</font><font class="fr">Sélections de scène un</font></font></h5>
-          <p class="lineend"><font class="en">Through sales of <i>White Elephant</i> and the art of <i>White Elephant</i>, this first scene at Animat Habitat has directed more than CA$3,500 to 5 conservation projects across 3 countries&mdash;to date.</font><font class="fr">Grâce aux ventes de <i>Éléphant blanc</i> et de l'art de <i>Éléphant blanc</i>, cette premier scène chez Animat Habitat à pu diriger de plus de 3 500 $ CA à 5 projets dans 3 pays &mdash; à ce jour.</font></p>
+          <p class="lineend"><font class="en">Through sales of <i>White Elephant</i> and the art of <i>White Elephant</i>, this first scene at Animat Habitat has directed more than CA$3,500 to 5 conservation projects across 3 countries&mdash;to date.</font><font class="fr">Grâce aux ventes de <i>Éléphant blanc</i> et de l'art de <i>Éléphant blanc</i>, cette premier scène chez Animat Habitat à pu diriger de plus de 3&nbsp;500&nbsp;$&nbsp;CA à 5 projets dans 3 pays &mdash; à ce jour.</font></p>
 
         </div>
 
