--- a/scene/three/history-of-whales-beluga/index.html
+++ b/scene/three/history-of-whales-beluga/index.html
@@ -28,7 +28,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Three) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Three &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
       <li class="crumb btn color"><a href="../" title="Animat Habitat scene three, scène trois.">III</a></li>
       <li class="crumb scene color"><a><i>Beluga</i></a></li>
     </ul>
