--- a/scene/three/index.html
+++ b/scene/three/index.html
@@ -31,7 +31,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Three) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
+      <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Three &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Bear</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="en">en&nbsp;&#92;&nbsp;fr</font><font class="fr">en</font></a></li>
     </ul>
@@ -50,7 +50,7 @@
 
   </div> -->
 
-  <div class="clear-bottom preview-thumbnail" id="preview-thumbnail">
+  <div class="clear-bottom vignette" id="vignette">
     <section class="single">
       <!-- <a onclick="toggle_preview();"> -->
         <div class="clear-bottom">
@@ -137,7 +137,7 @@
   var r = document.querySelector(':root'),
       toggle_lang = 0,
       // img = document.getElementById( "preview" ),
-      // tmb = document.getElementById( "preview-thumbnail" ),
+      // tmb = document.getElementById( "vignette" ),
       num = document.getElementById( "scene" );
 
   r.style.setProperty('--fr', "none");
