--- a/boutique/medium/1/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/1/last-of-the-big-tuskers/index.html
@@ -24,7 +24,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb"><a href="../" title="Animat Habitat boutique. Digital editions, Éditions numériques.">Digital</a></li>
       <li class="crumb active"><a><i>Magnificent Seven</i></a></li>
@@ -50,8 +50,8 @@
   <div class="clear preview" id="preview-isilo">
     <a onclick="preview_isilo();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
-        <p class="linebreak"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Isilo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
+        <p class="linebreak"><i>Isilo</i> &ndash; <font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -60,8 +60,8 @@
   <div class="clear preview" id="preview-kamboyo">
     <a onclick="preview_kamboyo();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
-        <p class="linebreak"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Kamboyo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
+        <p class="linebreak"><i>Kamboyo</i> &ndash; <font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -70,8 +70,8 @@
   <div class="clear preview" id="preview-masthulele">
     <a onclick="preview_masthulele();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
-        <p class="linebreak"><i>Masthulele</i> &ndash; Kruger National Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Masthulele preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
+        <p class="linebreak"><i>Masthulele</i> &ndash; <font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -80,8 +80,8 @@
   <div class="clear preview" id="preview-one-ton">
     <a onclick="preview_one_ton();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
-        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; One Ton preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
+        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -90,8 +90,8 @@
   <div class="clear preview" id="preview-satao">
     <a onclick="preview_satao();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
-        <p class="linebreak"><i>Satao</i> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Satao preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
+        <p class="linebreak"><i>Satao</i> &ndash; <font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -100,8 +100,8 @@
   <div class="clear preview" id="preview-tim">
     <a onclick="preview_tim();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
-        <p class="linebreak"><i>Tim</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
+        <p class="linebreak"><i>Tim</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -110,37 +110,37 @@
   <div class="clear preview" id="preview-craig">
     <a onclick="preview_craig();">
       <div class="text-center">
-        <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
-        <p class="linebreak"><i>Craig</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
+        <p class="linebreak"><i>Craig</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
   </div>
 
-  <div class="clear-bottom preview-thumbnail" id="preview-thumbnail">
+  <div class="clear-bottom vignette" id="vignette">
     <section class="single">
       <div class="gutter-small clear-top polyptych ptych-fixed">
 
         <div class="gutter-small">
-          <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
+          <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
+          <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
+          <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
+          <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
+          <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
+          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
+          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
         </div>
       </div>
 
