--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -25,7 +25,7 @@
     <ul class="page">
       <li class="crumb logo">
         <a href="../../" title="Animat Habitat">
-          <img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+          <img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../" title="Animat Habitat terms of access.">Terms</a></li>
       <li class="crumb active"><a><i>Terms of Purchase</i></a></li>
     </ul>
