--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -30,7 +30,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark &ndash; One &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Elephant</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="en">en&nbsp;&#92;&nbsp;fr</font><font class="fr">en</font></a></li>
       <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America."><font class="color-reset">
@@ -62,7 +62,7 @@
     </a>
   </div>
 
-  <div class="clear-bottom preview-thumbnail" id="preview-thumbnail">
+  <div class="clear-bottom vignette" id="vignette">
     <section class="single">
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
@@ -364,7 +364,7 @@
       toggle_lang = 0,
       curr = document.getElementById( "currency" ),
       img = document.getElementById( "preview" ),
-      tmb = document.getElementById( "preview-thumbnail" ),
+      tmb = document.getElementById( "vignette" ),
       num = document.getElementById( "scene" ),
       p_meta = document.getElementById( "product-meta" ),
       p_0101_0511 = document.getElementById( "product-0101-0511" ),
@@ -384,7 +384,7 @@
     if ( num.style.display == "none" ) {
       curr.style.display = "block";
       num.style.display = "block";
-      document.querySelector( "#preview-thumbnail" ).scrollIntoView({ behavior: 'smooth' });
+      document.querySelector( "#vignette" ).scrollIntoView({ behavior: 'smooth' });
     }
     else {
       curr.style.display = "none";
@@ -403,7 +403,7 @@
     else {
       img.style.display = "none";
       tmb.style.display = "block";
-      document.querySelector( "#preview-thumbnail" ).scrollIntoView({ behavior: 'smooth' });
+      document.querySelector( "#vignette" ).scrollIntoView({ behavior: 'smooth' });
     }
   };
 
