--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -30,7 +30,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Two &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb btn color"><a href="../" title="Animat Habitat scene two, scène deux.">II</a></li>
       <li class="crumb scene color"><a><i>Chapter Two</i></a></li>
     </ul>
